<resources>
    <string name="app_name">Kold food</string>
    <string name="history">View history</string>
    <string name="update_btn">My info</string>
    <string name="update_btn2">Update</string>
    <string name="login_btn">Log in</string>
    <string name="register_btn">Register</string>
    <string name="save_user_btn">Create!</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="summary_label">Order summary</string>
    <string name="total_price_label">Total: €%1$.2f</string>
    <string name="items_count_label">Items: %1$d</string>
    <string name="isdriver_label">isDriver</string>
    <string name="birthday_label">Birth day</string>
    <string name="licence_number_label">Licence number</string>
    <string name="address_label">Address</string>
    <string name="phone_number_label">Phone number</string>
    <string name="surname_label">Surname</string>
    <string name="name_label">Name</string>
    <string name="vehicle_type_label">Vehicle type</string>
    <string name="select_date">Select Date</string>
    <string name="place_order">Place Order</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="available_orders">Available orders</string>
    <string name="edit_account">Edit account</string>
    <string name="delivery_history">Delivery history</string>
    <string name="logout">Logout</string>
    <string name="view_current">View current</string>
    <string name="quantity_zero">0</string>
    <string name="increase_symbol">—</string>
    <string name="decrease_symbol">+</string>
    <string name="spicy_emoji">🌶️</string>
    <string name="vegan_emoji">🌱</string>
    <string name="sender_name">Sender Name</string>
    <string name="message_text">Message text</string>
    <string name="message_time">12:30</string>
    <string name="price_template">€0.00</string>
    <string name="restaurant">Restaurant</string>
    <string name="order">Order #</string>
    <string name="textview">TextView</string>
    <string name="delete_user">Delete user</string>
    <string name="password">Password</string>
    <string name="confirm_password_change">Confirm password change</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="old_password">Old password</string>
</resources>