<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesWolt.DetailsMenu">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/username_label"
        app:layout_constraintBottom_toTopOf="@+id/updateLoginField"
        app:layout_constraintStart_toStartOf="@+id/updateLoginField" />

    <EditText
        android:id="@+id/updateLoginField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/name_label"
        app:layout_constraintBottom_toTopOf="@+id/updateNameField"
        app:layout_constraintStart_toStartOf="@+id/updateNameField" />

    <EditText
        android:id="@+id/updateNameField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/surname_label"
        app:layout_constraintBottom_toTopOf="@+id/updateSurnameField"
        app:layout_constraintStart_toStartOf="@+id/updateSurnameField" />

    <EditText
        android:id="@+id/updateSurnameField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/phone_number_label"
        app:layout_constraintBottom_toTopOf="@+id/updatePhoneField"
        app:layout_constraintStart_toStartOf="@+id/updatePhoneField" />

    <EditText
        android:id="@+id/updatePhoneField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/address_label"
        app:layout_constraintBottom_toTopOf="@+id/updateAddressField"
        app:layout_constraintStart_toStartOf="@+id/updateAddressField" />

    <EditText
        android:id="@+id/updateAddressField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/licenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/licence_number_label"
        app:layout_constraintBottom_toTopOf="@+id/updateLicenceField"
        app:layout_constraintStart_toStartOf="@+id/updateLicenceField" />

    <EditText
        android:id="@+id/updateLicenceField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <TextView
        android:id="@+id/bDayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/birthday_label"
        app:layout_constraintBottom_toTopOf="@+id/updateBDayField"
        app:layout_constraintStart_toStartOf="@+id/updateBDayField" />

    <EditText
        android:id="@+id/updateBDayField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/select_date"
        android:inputType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateAccount"
        android:text="@string/update_btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Spinner
        android:id="@+id/updateVehicleType"
        android:layout_width="247dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/updateLicenceField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAddressField"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/vehicleTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_type_label"
        app:layout_constraintBottom_toTopOf="@+id/updateVehicleType"
        app:layout_constraintStart_toStartOf="@+id/updateVehicleType" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:onClick="deleteAccount"
        android:text="@string/delete_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateButton" />

    <Button
        android:id="@+id/passwordChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:onClick="updatePassword"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>