<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesWolt.RegistrationActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/username_label"
        app:layout_constraintBottom_toTopOf="@+id/regLoginField"
        app:layout_constraintStart_toStartOf="@+id/regLoginField" />

    <EditText
        android:id="@+id/regLoginField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/password_label"
        app:layout_constraintBottom_toTopOf="@+id/regPasswordField"
        app:layout_constraintStart_toStartOf="@+id/regPasswordField" />

    <EditText
        android:id="@+id/regPasswordField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/name_label"
        app:layout_constraintBottom_toTopOf="@+id/regNameField"
        app:layout_constraintStart_toStartOf="@+id/regNameField" />

    <EditText
        android:id="@+id/regNameField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/surname_label"
        app:layout_constraintBottom_toTopOf="@+id/regSurnameField"
        app:layout_constraintStart_toStartOf="@+id/regSurnameField" />

    <EditText
        android:id="@+id/regSurnameField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/phone_number_label"
        app:layout_constraintBottom_toTopOf="@+id/regPhoneField"
        app:layout_constraintStart_toStartOf="@+id/regPhoneField" />

    <EditText
        android:id="@+id/regPhoneField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <CheckBox
        android:id="@+id/regIsDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isdriver_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/address_label"
        app:layout_constraintBottom_toTopOf="@+id/regAddressField"
        app:layout_constraintStart_toStartOf="@+id/regAddressField" />

    <EditText
        android:id="@+id/regAddressField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/licenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/licence_number_label"
        app:layout_constraintBottom_toTopOf="@+id/regLicenceField"
        app:layout_constraintStart_toStartOf="@+id/regLicenceField" />

    <EditText
        android:id="@+id/regLicenceField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <TextView
        android:id="@+id/bDayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/birthday_label"
        app:layout_constraintBottom_toTopOf="@+id/regBDayField"
        app:layout_constraintStart_toStartOf="@+id/regBDayField" />

    <EditText
        android:id="@+id/regBDayField"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:hint="@string/select_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:text="@string/save_user_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Spinner
        android:id="@+id/regVehicleType"
        android:layout_width="247dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNameField"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/vehicleTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_type_label"
        app:layout_constraintBottom_toTopOf="@+id/regVehicleType"
        app:layout_constraintStart_toStartOf="@+id/regVehicleType" />

</androidx.constraintlayout.widget.ConstraintLayout>