<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesWolt.WoltRestaurants">

    <ListView
        android:id="@+id/restaurantList"
        android:layout_width="411dp"
        android:layout_height="558dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewPurchaseHistory"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewMyAccount"
        android:text="@string/update_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/ordersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewOrders"
        android:layout_marginTop="20dp"
        android:text="@string/view_current"
        app:layout_constraintEnd_toEndOf="@+id/historyButton"
        app:layout_constraintTop_toBottomOf="@+id/historyButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="@+id/infoButton"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>